--- a/teste_estilo/theme.css
+++ b/teste_estilo/theme.css
@@ -96,3 +96,9 @@ body {
     color: #6a1b9a;
     font-style: italic;
 }
+
+mark {
+    background: #fff59d;
+    padding: 0.05em 0.2em;
+    border-radius: 3px;
+}
