--- a/assets/css/notebook-theme.css
+++ b/assets/css/notebook-theme.css
@@ -6,7 +6,7 @@
 
 /* Markdown renderizado */
 .rendered_html {
-    font-family: 'Reenie Beanie', cursive !important;
+    font-family: 'Reenie Beanie', cursive;
     font-size: 22px;
     line-height: 1.6;
     color: #2c2c2c;
@@ -15,5 +15,5 @@
 /* Parágrafos e listas */
 .rendered_html p,
 .rendered_html li {
-    font-family: 'Reenie Beanie', cursive !important;
+    font-family: 'Reenie Beanie', cursive ;
 }
